--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         body{
             padding-left: 30px;
         }
+
+        footer{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -16,10 +20,10 @@
 
     <div id="submit"></div><br><br><br>
 
-    <div class="login"></div>
+    <div class="login"></div><br><br><br>
 
     <footer>
-        <a href=""></a>
+        <a href="https://github.com/Pero4l/SignUp-and-In" target="_blank">github Repo</a>
     </footer>
 
     <script>
